1,提供quarkus用例